@@ -1,3 +1,7 @@
+2007-10-19 Mathieu Blondel <mblondel@svn.gnome.org>
+
+    * data/pre-setup.rb: Don't copy .svn dirs.
+
 2007-10-18 Mathieu Blondel <mblondel@svn.gnome.org>
 
     * lib/fantasdic/sources/dict_server.rb: Method "available_strategies"
